force-app/main/default/objects/Temporal_Cuotas__c/Temporal_Cuotas__c.object-meta.xml
<CustomObject>
    <label>Temporal Cuota</label>
    <nameField>
        <label>Temporal Cuota</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Cuotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>