force-app/main/default/objects/Temporal_Cuotas__c/fields/CC_ANOINV__c.field-meta.xml
<CustomField>
    <fullName>CC_ANOINV__c</fullName>
    <label>CC_ANOINV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>