force-app/main/default/objects/Temporal_Cuotas__c/fields/CC_MEDPAGO__c.field-meta.xml
<CustomField>
    <fullName>CC_MEDPAGO__c</fullName>
    <label>CC_MEDPAGO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>