force-app/main/default/objects/Temporal_Cuotas__c/fields/CL_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>CL_ALUMNO__c</fullName>
    <label>CL_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>