force-app/main/default/objects/Temporal_Cuotas__c/fields/CL_ANUCUO__c.field-meta.xml
<CustomField>
    <fullName>CL_ANUCUO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CL_ANUCUO</label>
    <type>Checkbox</type>
</CustomField>