force-app/main/default/objects/Temporal_Cuotas__c/fields/CL_ANUFEC__c.field-meta.xml
<CustomField>
    <fullName>CL_ANUFEC__c</fullName>
    <label>CL_ANUFEC</label>
    <type>Date</type>
</CustomField>