force-app/main/default/objects/Temporal_Cuotas__c/fields/CL_ANUOPE__c.field-meta.xml
<CustomField>
    <fullName>CL_ANUOPE__c</fullName>
    <label>CL_ANUOPE</label>
    <type>Date</type>
</CustomField>