force-app/main/default/objects/Temporal_Cuotas__c/fields/CL_ASIENTO__c.field-meta.xml
<CustomField>
    <fullName>CL_ASIENTO__c</fullName>
    <label>CL_ASIENTO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>