force-app/main/default/objects/Temporal_Cuotas__c/fields/CL_BANCO__c.field-meta.xml
<CustomField>
    <fullName>CL_BANCO__c</fullName>
    <label>CL_BANCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>