force-app/main/default/objects/Temporal_Cuotas__c/fields/CL_IMPORTE__c.field-meta.xml
<CustomField>
    <fullName>CL_IMPORTE__c</fullName>
    <label>CL_IMPORTE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>