force-app/main/default/objects/Temporal_Cuotas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>CL_ALUMNO__c</columns>
    <columns>CL_ANO__c</columns>
    <columns>CL_TIPO__c</columns>
    <columns>CL_IMPORTE__c</columns>
    <columns>CL_FECHA__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo_Error__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Records</label>
</ListView>